RESOLVED FIXED15403
svg/custom/use-css-events.svg seems to have regressed on feature-branch
https://bugs.webkit.org/show_bug.cgi?id=15403
Summary svg/custom/use-css-events.svg seems to have regressed on feature-branch
Eric Seidel (no email)
Reported 2007-10-06 11:42:05 PDT
svg/custom/use-css-events.svg seems to have regressed on feature-branch Not sure when or how. But actual and expected images seem to disagree.
Attachments
Initial patch (3.02 KB, patch)
2007-12-02 16:54 PST, Nikolas Zimmermann
aroben: review+
Eric Seidel (no email)
Comment 1 2007-10-06 19:34:47 PDT
The test case is still rather complicated. Not entirely sure what it's testing.
Nikolas Zimmermann
Comment 2 2007-12-02 16:54:22 PST
Created attachment 17656 [details] Initial patch Also fixes several existing other test cases (all regresssions).
Adam Roben (:aroben)
Comment 3 2007-12-02 16:57:59 PST
Comment on attachment 17656 [details] Initial patch r=me
Nikolas Zimmermann
Comment 4 2007-12-02 17:05:54 PST
Landed in r28325.
Eric Seidel (no email)
Comment 5 2007-12-02 21:45:20 PST
Comment on attachment 17656 [details] Initial patch Um, it's seems kinda lame that any code depends on inner SVG's having width() height() set on their renderer. width()/height() are HTML rendering tree concepts. I guess they can be re-used in this manner.
Note You need to log in before you can comment on or make changes to this bug.