Reviewed by Adam.

RenderSVGViewportContainer sets wrong width/height.
Share code with RenderSVGContainer in a central calcBounds() function.

Fixes:
- svg/custom/use-css-events.svg (http://bugs.webkit.org/show_bug.cgi?id=15403)
- svg/custom/deep-dynamic-updates.svg
- svg/custom/use-clipped-hit.svg
- svg/custom/image-clipped-hit.svg


Canonical link: https://commits.webkit.org/22224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28325 268f45cc-cd09-0410-ab3c-d52691b4dbfc