WebCore/rendering/RenderSVGContainer.h
@@ -92,6 +92,8 @@ protected:
     virtual void applyContentTransforms(PaintInfo&);
     virtual void applyAdditionalTransforms(PaintInfo&);
 
+    void calcBounds();
+
 private:
     int calcReplacedWidth() const;
     int calcReplacedHeight() const;
